force-app/main/default/objects/Visit_Checklist__c/Visit_Checklist__c.object-meta.xml
<CustomObject>
    <label>Visit Checklist</label>
    <pluralLabel>Visit Checklists</pluralLabel>
    <description>Visit Checklist</description>
    <nameField>
        <label>Visit Checklist Name</label>
        <type>AutoNumber</type>
        <displayFormat>VCL-{000000}</displayFormat>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>