force-app/main/default/objects/Visit_Checklist__c/fields/Completed__c.field-meta.xml
<CustomField>
    <fullName>Completed__c</fullName>
    <label>Completed</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>Completed</description>
</CustomField>