force-app/main/default/objects/Visit_Checklist__c/fields/Item__c.field-meta.xml
<CustomField>
    <fullName>Item__c</fullName>
    <label>Item</label>
    <type>Text</type>
    <length>80</length>
    <description>Item</description>
</CustomField>