force-app/main/default/objects/Visit_Checklist__c/fields/Required__c.field-meta.xml
<CustomField>
    <fullName>Required__c</fullName>
    <label>Required</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
    <description>Required</description>
</CustomField>