force-app/main/default/objects/Visit_Checklist__c/fields/Sales_Visit__c.field-meta.xml
<CustomField>
    <fullName>Sales_Visit__c</fullName>
    <label>Sales Visit</label>
    <type>MasterDetail</type>
    <referenceTo>Sales_Visit__c</referenceTo>
    <relationshipLabel>Checklist</relationshipLabel>
    <relationshipName>Checklist_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <description>Sales Visit</description>
</CustomField>